--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.show-sql: true
 
 spring.security.user.name=root
 spring.security.user.password=batman
+
+server.error.include-stacktrace=never
