--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.security.user.name=root
 spring.security.user.password=batman
 
 server.error.include-stacktrace=never
+
+api.token.jwt.secret=${JWT_SECRET:123456}
