--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.password=root@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
+spring.flyway.baselineOnMigrate=true
+
 spring.security.user.name=root
 spring.security.user.password=batman
 
