testes cliente controller

--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,7 @@
 			<artifactId>flyway-mysql</artifactId>
 		</dependency>
 
+
 	</dependencies>
 
 	<build>
@@ -177,6 +178,10 @@
 						</exclude>
 					</excludes>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.graalvm.buildtools</groupId>
+				<artifactId>native-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
