--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,10 @@
 			<artifactId>flyway-mysql</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
 
 	</dependencies>
 
