--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,9 @@ spring.security.user.password=batman
 server.error.include-stacktrace=never
 
 api.token.jwt.secret=${JWT_SECRET:123456}
+
+api.exchange.url=https://api.exchangeratesapi.io/v1/
+#api.exchange.url=https://api.exchangeratesapi.io/v1/2013-12-24?access_key = API_KEY&base=GBP&symbols=USD,CAD,EUR --Historico
+api.exchange.url.lastest=https://api.exchangeratesapi.io/v1/latest
+api.exchange.url.convert=https://api.exchangeratesapi.io/v1/convert
+api.exchange.accessKey=af3e84946a5308c9ff6621bd9991bbfa
