ajuste no update e delete de movimentacao. implementação de insert na tabela saldo_historico

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,5 @@ api.exchange.url=https://openexchangerates.org/api/
 api.exchange.url.lastest=https://openexchangerates.org/api/latest.json
 api.exchange.url.convert=https://openexchangerates.org/api/convert/
 api.exchange.accessKey=a63e3601d04c4a60b885866ee229d1a8
+
+api.mock.movimentacoes.buscar=https://67327b042a1b1a4ae1101156.mockapi.io/movimentacoes/buscar
